# claimminer

./: .gitignore  MIT_LICENSE  hypercorn.toml.sample  ontology.yaml  requirements.txt  setup.cfg
claim_miner/: __init__.py  app.py  app_full.py  auth.py  debatemap_client.py  embed.py  kafka.py  llm.py  models.py  nlp.py  uri.py  uri_equivalence.py
claim_miner/tasks/: __init__.py  debatemap.py  download.py  embed.py  gdelt.py  kafka.py  process_html.py  process_pdf.py  process_text.py
claim_miner/web/: __init__.py  auth_routes.py  claim.py  claim_clusters.py  claim_index.py  collection.py  cse.py  dashboard.py  docs.py  prompts.py  scatterplot.py  search.py
deploy/: admin_base.sql  analysis.sql  analyzer.sql  base.sql  claim_link.sql  collection.sql  document.sql  embedding.sql  entities.sql  fragment.sql  mmr_function.sql  uri_equiv.sql  user.sql
doc/: conf.py  index.rst  install.rst  overview.rst
revert/: admin_base.sql  analysis.sql  analyzer.sql  base.sql  claim_link.sql  collection.sql  document.sql  embedding.sql  entities.sql  fragment.sql  mmr_function.sql  user.sql
static/: style.css
templates/: admin.html  apply_prompt.html  base.html  claim_clusters.html  claim_index.html  claim_info.html  doc_info.html  edit_prompt.html  gdelt.html  home.html  key_points.html  list_claims.html  list_collections.html  list_docs.html  list_prompts.html  login.html  macros.html  propose_claim.html  register.html  scatter.html  search.html  upload_claims.html  upload_docs.html  view_collection.html
