[metadata]
name = ClaimMiner
version = 0.0.1
author = Marc-Antoine Parent
author_email = maparent@conversence.com


[options]
packages = find:
zip_safe = False
include_package_data = True
python_requires = >=3.10
install_requires =
  aiomcache
  aiomonitor
  aiokafka
  asyncpg
  asyncio-pool
  backoff
  beautifulsoup4
  Cython
  debater-python-api
  frozendict
  google-api-python-client
  google-api-core
  google-cloud-bigquery
  grpcio
  grpcio-status
  gql
  hashfs
  httpx
  hypercorn[uvloop]
  isodate
  keras
  langchain
  langdetect @ git+https://github.com/maparent/langdetect.git@no_sample
  lxml
  openai
  passlib
  pdfminer.six
  pdfx
  protobuf
  pgvector
  psycopg2
  pyamg
  pytest
  pyyaml
  quart
  quart-auth
  quart-CORS
  quart-session
  redis
  simplejson
  spacy
  sqlalchemy[asyncio]>2
  tensorboard
  tensorflow-estimator
  tensorflow; sys_platform=="linux"
  tensorflow-macos; sys_platform=="darwin"
  tensorflow-metal; sys_platform=="darwin"
  tensorflow-text
  websockets

[options.extras_require]
docs =
  Sphinx

[options.package_data]
templates = templates/*.html

[options.entry_points]
console_scripts =
    claim_miner_web = claim_miner.app_full:main
    claim_miner_events = claim_miner.tasks.kafka:main
